# vardefunc

./: .flake8  .gitignore  .mypy.ini  README.md  placebo.py  pylock.toml  pyproject.toml  requirements.txt  setup.py  vardefunc.py
.github/: dependabot.yml
.github/workflows/: autotag.yml  lint.yml  publish.yml
examples/: example_aa.py  example_debug_output.py  example_mask.py  example_ocr.py
stubs/vapoursynth/: __init__.pyi  vapoursynth.pyi
vardefunc/: __init__.py  aa.py  deband.py  mask.py  misc.py  noise.py  ocr.py  placebo.py  scale.py  sharp.py  types.py  util.py  vsjet_proxy.py
